effect hooks added

--- a/summary/React/08. Hooks.md
+++ b/summary/React/08. Hooks.md
@@ -1,6 +1,14 @@
 # Hooks
 
-React 16.8+ supports *Hooks*. With Hooks, simple function components can do a lot things that were only possible with class components in the past. React Hooks are functions that let us manage the internal state of components and handle post-rendering side effects directly from our function components. Keep in mind that function components and React Hooks do not replace class components. They are completely optional; just a new tool that we can take advantage of. React offers a number of built-in Hooks. A few of these include `useState()`, `useEffect()`, `useContext()`, `useReducer()`, and `useRef()`. See [the full list in the docs](https://reactjs.org/docs/hooks-reference.html).
+React 16.8+ supports *Hooks*. With Hooks, simple function components can do a lot things that were only possible with class components in the past. React Hooks are functions that let us manage the internal state of components and handle post-rendering side effects directly from our function components. Keep in mind that function components and React Hooks do not replace class components. They are completely optional; just a new tool that we can take advantage of. React offers a number of built-in Hooks. A few of these include `useState()`, `useEffect()`, `useContext()`, `useReducer()`, and `useRef()`. See [the full list in the docs](https://reactjs.org/docs/hooks-reference.html). 
+
+Before Hooks, function components were only used to accept data in the form of props and return some JSX to be rendered. However, the State Hook allows us to manage dynamic data, in the form of component state, within our function components.
+
+There are two main rules to keep in mind when using Hooks:
+
+1. only call Hooks at the top level
+
+2. only call Hooks from React functions
 
 ## State Hook
 
@@ -293,3 +301,458 @@ export default function AppFunction() {
 }
 ```
 </details>
+
+## Effect Hooks
+
+The Effect Hook is used to run some JavaScript code after each render, such as:
+
+- fetching data from a backend service
+- subscribing to a stream of data
+- managing timers and intervals
+- reading from and making changes to the DOM
+
+#### Why after each render?
+
+Most components will re-render multiple times throughout their lifetime and these key moments present the perfect opportunity to execute these “side effects”. There are three key moments when the Effect Hook can be utilized:
+
+1. When the component is first added, or *mounted*, to the DOM and renders
+2. When the state or props change, causing the component to re-render
+3. When the component is removed, or *unmounted*, from the DOM.
+
+It is possible to finetune when an Effect Hook is utilized using the 'dependency array'.
+
+Just like the State Hook is a named export from the React library, the Effect Hook is imported in a similar fashion. 
+
+```jsx
+import React, { useState, useEffect } from 'react';
+```
+
+> **Caution!**
+>
+> Be sure to use the Effect Hook after calling the State Hook. Hooks must be used at the beginning of a component definition.
+
+### Cleaning up
+
+Just like the previous code example's from the life-cycle section, things like event listeners and timers need to be cleaned up before unmounting. This is achieved by including a `return()` function in `useEffect()`. Because effects run after every render and not just once, React calls our cleanup function before each re-render and before unmounting to clean up each effect call.
+
+**Example Code**
+
+```jsx
+import React, { useState, useEffect } from 'react';
+
+export default function Counter() {
+  const [clickCount, setClickCount] = useState(0);
+
+  useEffect(()=>{
+    document.addEventListener('mousedown', increment);
+    return () => {document.removeEventListener('mousedown', increment); };
+  });
+
+  const increment = () => {
+    setClickCount((prev) => prev + 1);
+  };
+
+  return <h1>Document Clicks: {clickCount}</h1>
+}
+```
+
+### Call Control
+
+By default The `useEffect()` function calls its first argument (the effect) after each time a component renders. To finetune this behavior the dependency array is used. 
+
+1. An empty dependency array signals to the Effect Hook that the effect never needs to be re-run, that it doesn’t depend on anything. Specifying zero dependencies means that the result of running that effect won’t change and calling our effect once is enough. Example code with a cleanup function and an empty dependency array.
+
+   ```jsx
+     useEffect(() => {
+       const intervalId = setInterval(() => {
+         setTime((prev) => prev + 1);
+       }, 1000);
+   
+       return () => {
+         clearInterval(intervalId);
+       };
+     }, []);
+   ```
+
+2. A dependency array that is not empty signals to the Effect Hook that it can skip calling our effect after re-renders unless the value of one of the variables in our dependency array has changed. If the value of a dependency has changed, then the Effect Hook will be called again. The first code example on effect hooks could be made to only re-render the document title whenever the count actually increased. 
+
+   ```jsx
+   useEffect(() => {
+     document.title = `You clicked ${count} times`;
+   }, [count]);
+   ```
+
+### Separate Hooks for Separate Effects
+
+When multiple values are closely related and change at the same time, it can make sense to group these values in a collection like an object or array. Packaging data together can also add complexity to the code responsible for managing that data. Therefore, it is a good idea to separate concerns by managing different data with different Hooks.
+
+**Example Code**
+
+
+```jsx
+// BAD, no separation of concerns
+// Handle both position and menuItems with one useEffect hook.
+const [data, setData] = useState({ position: { x: 0, y: 0 } });
+useEffect(() => {
+    get('/menu').then((response) => {
+        setData((prev) => (
+            { ...prev, menuItems: response.data }));
+    });
+    const handleMove = (event) =>
+        setData((prev) => (
+            { ...prev, position: { x: event.clientX, y: event.clientY } }
+        ));
+    window.addEventListener('mousemove', handleMove);
+    return () => window.removeEventListener('mousemove', handleMove);
+}, []);
+
+// GOOD: Separation of concerns.
+// Handle menuItems with one useEffect hook.
+const [menuItems, setMenuItems] = useState(null);
+useEffect(() => {
+    get('/menu').then((response) => setMenuItems(response.data));
+}, []);
+ 
+// Handle position with a separate useEffect hook.
+const [position, setPosition] = useState({ x: 0, y: 0 });
+useEffect(() => {
+const handleMove = (event) =>
+    setPosition({ x: event.clientX, y: event.clientY });
+    window.addEventListener('mousemove', handleMove);
+    return () => window.removeEventListener('mousemove', handleMove);
+}, []);
+```
+
+### Other Examples
+
+These are other code examples from the lessons on effect hooks.
+
+<detail>
+ <summary>Example with fetching data for weather forecast</summary>
+
+
+```jsx
+import React, { useState, useEffect } from "react";
+import { get } from './mockBackend/fetch';
+
+export default function Forecast() {
+    const [data, setData] = useState();
+    const [notes, setNotes] = useState({});
+    const [forecastType, setForecastType] = useState('/daily');
+
+    useEffect(() => {
+        alert('Requested data from server...');
+        get(forecastType).then((response) => {
+        alert('Response: ' + JSON.stringify(response,'',2));
+        setData(response.data);
+        });
+    }, [forecastType]);
+
+    const handleChange = (index) => ({ target }) =>
+        setNotes((prev) => (
+            { ...prev, [index]: target.value }
+        ));
+
+    if (!data) { return <p>Loading...</p> }
+
+    return (
+        <div className='App'>
+        <h1>My Weather Planner</h1>
+        <div>
+            <button onClick={() => setForecastType('/daily')}>5-day</button>
+            <button onClick={() => setForecastType('/hourly')}>Today</button>
+        </div>
+        <table>
+            <thead>
+            <tr>
+                <th>Summary</th>
+                <th>Avg Temp</th>
+                <th>Precip</th>
+                <th>Notes</th>
+            </tr>
+            </thead>
+            <tbody>
+            {data.map((item, i) => (
+                <tr key={item.id}>
+                <td>{item.summary}</td>
+                <td> {item.temp.avg}°F</td>
+                <td>{item.precip}%</td>
+                <td>
+                    <input
+                    value={notes[item.id] || ''}
+                    onChange={handleChange(item.id)}
+                    />
+                </td>
+                </tr>
+            ))}
+            </tbody>
+        </table>
+        </div>
+    );
+}
+```
+</details>
+
+<details>
+ <summary>Example with fetching data for a shopping site</summary>
+
+```jsx
+import React, { useState, useEffect } from 'react';
+import { get } from './mockBackend/fetch';
+
+export default function Shop() {
+    const [categories, setCategories] = useState(null);
+    const [selectedCategory, setSelectedCategory] = useState(null);
+    const [items, setItems] = useState({});
+
+    useEffect(() => {
+        get('/categories').then((response) => {
+        setCategories(response.data);
+        });
+    }, []);
+
+    useEffect(() => {
+        if (selectedCategory && !items[selectedCategory]) {
+            get(`/items?category=${selectedCategory}`).then((response) => {
+                setItems((prev) => (
+                    { ...prev, [selectedCategory]: response.data }
+                ));
+            });
+        }
+    }, [items, selectedCategory]);
+
+    if (!categories) { return <p>Loading..</p> }
+
+    return (
+        <div className='App'>
+        <h1>Clothes 'n Things</h1>
+        <nav>
+            {categories.map((category) => (
+            <button key={category} onClick={() => setSelectedCategory(category)}>
+                {category}
+            </button>
+            ))}
+        </nav>
+        <h2>{selectedCategory}</h2>
+        <ul>
+            {!items[selectedCategory]
+            ? null
+            : items[selectedCategory].map((item) => <li key={item}>{item}</li>)}
+        </ul>
+        </div>
+    );
+}
+```
+</details>
+
+<details>
+ <summary>Social Network Example</summary>
+
+```jsx
+import React, { useState, useEffect } from 'react';
+import { get } from './mockBackend/fetch';
+
+export default function SocialNetwork() {
+    const [menu, setMenu] = useState(null);
+    useEffect(() => {
+        get('/menu').then((response) => setMenu(response.data));
+    }), []);
+
+    const [newsFeed, setNewsFeed] = useState(null);
+    useEffect(() => {
+        get('/news-feed').then((response) => setNewsFeed(response.data));
+    }), []);
+  
+    const [friends, setFriends] = useState(null);
+    useEffect(() => {
+        get('/friends').then((response) => setFriends(response.data));  
+    }), []);
+
+    return (
+        <div className='App'>
+            <h1>My Network</h1>
+            {!menu ? <p>Loading..</p> : (
+                <nav>
+                {menu.map((menuItem) => (
+                    <button key={menuItem}>{menuItem}</button>
+                ))}
+                </nav>
+            )}
+            <div className='content'>
+                {!newsFeed ? <p>Loading..</p> : (
+                <section>
+                    {newsFeed.map(({ id, title, message, imgSrc }) => (
+                    <article key={id}>
+                        <h3>{title}</h3>
+                        <p>{message}</p>
+                        <img src={imgSrc} alt='' />
+                    </article>
+                    ))}
+                </section>
+                )}
+                {!friends ? <p>Loading..</p> : (
+                <aside>
+                    <ul>
+                    {friends
+                        .sort((a, b) => (a.isOnline && !b.isOnline ? -1 : 0))
+                        .map(({ id, name, isOnline }) => (
+                        <li key={id} className={isOnline ? 'online' : 'offline'}>
+                            {name}
+                        </li>
+                        ))}
+                    </ul>
+                </aside>
+                )}
+            </div>
+        </div>
+    );
+}
+```
+</details>
+
+### Final Project on Hooks
+
+> This project allows a user to enter text as thoughts, remove them manually and they will disappear with a timeout after 15 seconds.
+>
+> - It shows how to pass props, and how to call them
+> - It uses State hooks
+> - It uses Event hooks for timeout with a clean-up
+
+**app.js**
+
+- addThought is used as a prop function for the form, and passed into the form. In the form it is accessed with prop.thought
+- removeThought is used as a prop function in Thought.js, but accessed via prop de-constructring. 
+
+
+```js
+import React, { useState } from 'react';
+import ReactDOM from 'react-dom';
+import { AddThoughtForm } from './AddThoughtForm';
+import { Thought } from './Thought';
+import { generateId, getNewExpirationTime } from './utilities';
+
+function App() {
+    const [thoughts, setThoughts] = useState([
+        {
+        id: generateId(),
+        text: 'This is a place for your passing thoughts.',
+        expiresAt: getNewExpirationTime(),
+        },
+        {
+        id: generateId(),
+        text: "They'll be removed after 15 seconds.",
+        expiresAt: getNewExpirationTime(),
+        },
+    ]);
+
+    const addThought = (thought) => {
+        setThoughts(prev => [thought, ...prev])
+    }
+
+    const removeThought = (thoughtIdToRemove) => {
+        setThoughts((thoughts) => thoughts.filter(thought => thought.id !== thoughtIdToRemove));
+    }
+
+    return (
+        <div className="App">
+            <header>
+                <h1>Passing Thoughts</h1>
+            </header>
+            <main>
+                <AddThoughtForm addThought={addThought} />
+                <ul className="thoughts">
+                {thoughts.map((thought) => (
+                    <Thought key={thought.id} thought={thought} removeThought={removeThought}/>
+                ))}
+                </ul>
+            </main>
+        </div>
+    );
+}
+ReactDOM.render(<App />, document.getElementById('app'));
+```
+
+**AddThoughtForm.js**
+
+- useState is used to store the text in the form
+- setText() is called in handleTextChange. The text from a inputfield is accessed via event.target.value
+- the form onSubmit is hooked to a new function handleSubmit(). `event.preventDefault();` prevents a page refresh. A new dict is passed into the addThought() function in app.js via prop.addThought()
+- clearing the field is done via setText('')
+
+```js
+import React, { useState } from 'react';
+import { generateId, getNewExpirationTime } from './utilities';
+
+export function AddThoughtForm(props) {
+    const [text, setText] = useState('');
+    const handleTextChange = (event) => {
+        setText(event.target.value);
+    }
+
+    const handleSubmit = (event) => {
+        event.preventDefault();
+        if (text.length === 0) return;
+
+        const thought = {
+        id: generateId(),
+        text: text,
+        expiresAt: getNewExpirationTime()
+        }
+        
+        props.addThought(thought);
+        setText('');
+    }
+
+    return (
+        <form className="AddThoughtForm" onSubmit={handleSubmit}>
+        <input
+            type="text"
+            aria-label="What's on your mind?"
+            placeholder="What's on your mind?"
+            value={text}
+            onChange={handleTextChange}
+        />
+        <input type="submit" value="Add" />
+        </form>
+    );
+}
+```
+
+**thought.js**
+
+- useEffect is used to set a timeout to clear the thoughts automatically. The timeout is deleted when it expires.
+
+```js
+import React, { useEffect } from 'react';
+
+export function Thought(props) {
+    useEffect(() => {
+        const timeRemaining = thought.expiresAt - Date.now();
+        const timeout = setTimeout(() => {
+            removeThought(thought.id)
+        }, timeRemaining);
+
+        return () => { clearTimeout(timeout) };
+    }, [thought]);
+
+    const { thought, removeThought } = props;
+
+    const handleRemoveClick = () => {
+        removeThought(thought.id);
+    };
+
+    return (
+        <li className="Thought">
+            <button
+                aria-label="Remove thought"
+                className="remove-button"
+                onClick={handleRemoveClick}
+            >
+            &times;
+            </button>
+            <div className="text">{thought.text}</div>
+        </li>
+    );
+}
+```
+
