effect hooks details tag fix

--- a/summary/React/08. Hooks.md
+++ b/summary/React/08. Hooks.md
@@ -427,7 +427,7 @@ const handleMove = (event) =>
 
 These are other code examples from the lessons on effect hooks.
 
-<detail>
+<details>
  <summary>Example with fetching data for weather forecast</summary>
 
 
