updated summary 04, missing tasks

--- a/summary/07 redux/04.md
+++ b/summary/07 redux/04.md
@@ -201,8 +201,10 @@ Inside the function body of selectFilteredAllRecipes, create two variables:
 - searchTerm and assign the return value of selectSearchTerm(state)
 
 Now you have an array of the recipes in allrecipes and the current search term string in searchTerm.
-To get a filtered list of recipes based on the search term you will use the JavaScript array filter() method.
-Inside selectFilteredAllRecipes, call allRecipes.filter() with the following callback function as the argument:
+To get a filtered list of recipes based on the search term you will use the JavaScript array 
+filter() method.
+Inside selectFilteredAllRecipes, call allRecipes.filter() with the following callback function 
+as the argument:
 
 	recipe => recipe.name.toLowerCase().includes(searchTerm.toLowerCase())
 	
@@ -316,6 +318,71 @@ This final example uses `props.id` to extract a single element from an array or 
 2. Selectors are created to give instructions on retrieving data from the store.
 3. `useSelector()` is called within a child component of `<Provider>` for executing selector instructions to retrieve data and subscribe to re-rendering.
 
+**tasks**
+
+```jsx
+/*
+To access Redux store data with useSelector(), you first need to import it from react-redux.
+In AllRecipes.js import useSelector from react-redux.
+
+Along with useSelector() you need access to the selectFilteredAllRecipes selector defined 
+in the previous exercise.
+In AllRecipes.js add selectFilteredAllRecipes to the allRecipesSlice.js import statement.
+
+With both import statements complete, you are now able to access the data using the 
+selector function and useSelector().
+
+Inside the AllRecipes() component function:
+- Define a variable allRecipes.
+- Assign it the value returned by useSelector().
+- Pass selectFilteredAllRecipes to useSelector().
+In this exercise, the data was initialized with recipes so when you run the code 
+you should see the recipe data rendered in the browser.
+
+*/
+import React, { useEffect } from 'react';
+// Implement the import statements below.
+import { useSelector } from 'react-redux';
+
+// Add the selector to the below import statement 
+import { loadData, selectFilteredAllRecipes  } from './allRecipesSlice.js';
+import { addRecipe } from '../favoriteRecipes/favoriteRecipesSlice.js';
+import FavoriteButton from "../../components/FavoriteButton";
+import Recipe from "../../components/Recipe";
+const favoriteIconURL = 'https://static-assets.codecademy.com/Courses/Learn-Redux/Recipes-App/icons/favorite.svg';
+
+export const AllRecipes = () => {
+  // Implement allRecipes variable below.
+  const allRecipes = useSelector(selectFilteredAllRecipes);
+  
+  const onFirstRender = () => {
+    // dispatch(loadData());
+  }
+  useEffect(onFirstRender, []);
+
+  const onAddRecipeHandler = (recipe) => {
+    // dispatch(addRecipe(recipe));
+  };
+
+  return (
+    <div className="recipes-container">
+      {allRecipes.map((recipe) => (
+        <Recipe recipe={recipe} key={recipe.id}>
+          <FavoriteButton
+            onClickHandler={() => onAddRecipeHandler(recipe)}
+            icon={favoriteIconURL}
+          >
+            Add to Favorites
+          </FavoriteButton>
+        </Recipe>
+      ))}
+    </div>
+  );
+};
+```
+
+
+
 ## The useDispatch() hook
 
 With the `<Provider>` component, selectors, and `useSelector()` implemented, you are now able to access the application state and subscribe component rendering to data changes. In this exercise, you are going to look at the final step: dispatching actions.
@@ -363,6 +430,113 @@ This example demonstrates:
 - Dispatching an action using `dispatch()` with `removeTodo`.
 
 The `useDispatch` hook allows you to dispatch actions from any component that is a descendent of the `<Provider>` component, therefore avoiding passing a reference to `store.dispatch` through props. Both approaches accomplish the same thing but `useDispatch()` avoids props drilling.
+
+**Tasks**
+
+```jsx
+/*
+In AllRecipes.js:
+
+- Add useDispatch to the react-redux import statement.
+- Create a variable dispatch inside the AllRecipes component and assign 
+  it the reference returned by useDispatch().
+
+*/
+
+import React, { useEffect } from 'react';
+// Add useDispatch to the import statement below.
+import { useSelector, useDispatch } from 'react-redux';
+
+import { addRecipe } from '../favoriteRecipes/favoriteRecipesSlice.js';
+import { loadData, selectFilteredAllRecipes } from './allRecipesSlice.js';
+import FavoriteButton from "../../components/FavoriteButton";
+import Recipe from "../../components/Recipe";
+const favoriteIconURL = 'https://static-assets.codecademy.com/Courses/Learn-Redux/Recipes-App/icons/favorite.svg';
+
+export const AllRecipes = () => {
+  const allRecipes = useSelector(selectFilteredAllRecipes);
+  // Implement dispatch variable below.
+  const dispatch = useDispatch();
+  
+  const onFirstRender = () => { dispatch(loadData()); }
+  useEffect(onFirstRender, []);
+  
+  const onAddRecipeHandler = (recipe) => {
+    dispatch(addRecipe(recipe));
+  };
+
+  return (
+    <div className="recipes-container">
+      {allRecipes.map((recipe) => (
+        <Recipe recipe={recipe} key={recipe.id}>
+          <FavoriteButton
+            onClickHandler={() => onAddRecipeHandler(recipe)}
+            icon={favoriteIconURL}
+          >
+            Add to Favorites
+          </FavoriteButton>
+        </Recipe>
+      ))}
+    </div>
+  );
+};
+```
+
+```jsx
+/*
+
+In FavoriteRecipes.js, useDispatch has been added to the import statement and the dispatch 
+reference has been defined. 
+Use dispatch to dispatch the action inside one of the handler functions.
+
+Inside the onRemoveRecipeHandler function:
+- Dispatch an action using dispatch()
+- Pass the removeRecipe() action creator to dispatch().
+- Pass recipe to the action creator.
+
+When you run the application you should be able to remove items from your favorite list. 
+The SearchTerm component action dispatching has also been implemented so you can now 
+filter both recipe lists using the text box.
+*/
+
+import React from 'react';
+import { useSelector, useDispatch } from 'react-redux';
+
+import { removeRecipe, selectFilteredFavoriteRecipes } from './favoriteRecipesSlice.js';
+import FavoriteButton from "../../components/FavoriteButton";
+import Recipe from "../../components/Recipe";
+const unfavoriteIconUrl = 'https://static-assets.codecademy.com/Courses/Learn-Redux/Recipes-App/icons/unfavorite.svg';
+
+export const FavoriteRecipes = () =>{
+  const favoriteRecipes = useSelector(selectFilteredFavoriteRecipes);
+  const dispatch = useDispatch();
+
+  const onRemoveRecipeHandler = (recipe) => {
+    // Dispatch the action below.
+    dispatch(removeRecipe(recipe));
+  };
+
+  return (
+    <div className="recipes-container">
+      {favoriteRecipes.map(createRecipeComponent)}
+    </div>
+  );
+
+  // Helper Function
+  function createRecipeComponent(recipe) {
+    return (
+      <Recipe recipe={recipe} key={recipe.id}>
+        <FavoriteButton
+          onClickHandler={() => onRemoveRecipeHandler(recipe)}
+          icon={unfavoriteIconUrl}
+        >
+          Remove Favorite
+        </FavoriteButton>
+      </Recipe>
+    )
+  } 
+};
+```
 
 ## Review
 
